# email-classification

./: .env.example  main.py  pyproject.toml  test.py
api/: desc.py
api/v1/: classify_email_api.py  email_classification_graph_api.py  email_replyer_api.py  org_functionality_api.py  rag_retrieval_api.py  reply_graph_api.py  retreive_data_db.py  store_vectors_pdf_api.py
core/: config.py  database.py
graphs/: email_classification_graph.py  reply_graph.py
models/: __init__.py  request-response.py  request_response.py  schema.py
pkl_files/: Modelfile  email_dataset_long.csv  email_dataset_long.pkl
services/: classify_email.py  generate_email_from_db.py  generate_email_using_rag.py  generic_email_replyer.py  org_service.py  rag_retrieval.py  store_pdf_in_pgvector.py
sql/: jharkhand_db_sample_data_postgres.sql  jharkhand_db_schema.sql  jharkhand_db_schema_postgres.sql
