[project]
name = "email-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "models*", "services*","graphs*"]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
]
