[project]
name = "email-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "langgraph>=0.6.7",
    "langsmith>=0.4.27",
    "load-dotenv>=0.1.0",
    "nest-asyncio>=1.6.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyngrok>=7.3.0",
    "scikit-learn==1.6.1",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "models*", "services*","graphs*"]

[tool.uv.workspace]
members = [
    "scikit-learn",
]

[tool.uv.sources]
scikit-learn = { workspace = true }

[dependency-groups]
dev = [
    "alembic>=1.16.5",
]
